[WEB-602] Fix button alignment

--- a/styles/components/_two-pages-promo.scss
+++ b/styles/components/_two-pages-promo.scss
@@ -92,6 +92,10 @@
       .two-pages-promo__page__description p {
         line-height: 1.75;
       }
+
+      .button-container {
+        text-align: left;
+      }
     }
   }
 
